Update bot code

--- a/.fx/configs/projectSettings.json
+++ b/.fx/configs/projectSettings.json
@@ -1,6 +1,6 @@
 {
-    "appName": "AvalancheNotificationBot",
-    "projectId": "9290b3d4-a03e-496d-b166-4c6db6697535",
+    "appName": "UtahAvalancheCenterBot",
+    "projectId": "f6d3544a-d01f-4734-b32a-a0655d4fa927",
     "version": "2.1.0",
     "isFromSample": false,
     "solutionSettings": {
