--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "AvalancheNotificationBot",
+    "name": "UtahAvalancheCenterBot",
     "version": "0.0.1",
     "description": "",
     "author": "",
